compiler/tests/fixtures/invalid/semantics/chance_outside_range.viv
// Invalid: chance expression outside valid range

action bad-chance:
    roles:
        @actor:
            as: initiator
    conditions:
        150%
